# CricOracle2026

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  SETUP_GUIDE.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  main.py
api/routers/: predict.py  squad.py
data/squads/: wc2026_squads.json
frontend/: index.html
notebooks/: 01_EDA.ipynb
scripts/: predict.py  train.py
src/: __init__.py  config.py
src/data/: __init__.py  loader.py  weather.py
src/evaluation/: __init__.py  metrics.py
src/features/: __init__.py  match_context.py  match_player_features.py  pipeline.py  player.py  team.py  venue.py  xi_features.py
src/models/: __init__.py  model_service.py  score_lstm.py  score_predictor.py  squad_optimiser.py  trainer.py  win_predictor.py
src/utils/: logger.py  validators.py
tests/: __init__.py  conftest.py  test_features.py  test_loader.py  test_match_player_features.py  test_models.py
